--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -445,7 +445,8 @@
 				<th:block th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" th:include="fragments/modaleRiepilogoValutazioni :: modaleRiepilogoValutazioni"></th:block>
 
 				<!-- modale invia al protocollo -->
-				<div th:if="${accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma} or ${accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma}" id="attesaFirma-modal" class="modal fade modal-attesa-firma"
+				<div th:if="${accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma} or ${accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma}
+				or ${accreditamentoWrapper.canAccreditatoInAttesaDiFirma} or ${accreditamentoWrapper.canDiniegoInAttesaDiFirma}" id="attesaFirma-modal" class="modal fade modal-attesa-firma"
 					data-model-index="1" role="dialog">
 					<div class="modal-dialog modal-lg">
 						<div class="modal-content">
@@ -458,11 +459,39 @@
 									method="post" enctype="multipart/form-data"
 									novalidate="novalidate">
 
-									<th:block th:if="${accreditamentoWrapper.accreditamento.isRichiestaIntegrazioneInAttesaDiFirma()}">
-										<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_PROVVISORIO_INTEGRAZIONE}', richiestaIntegrazione, null, null, null, true, null, false)" ></th:block>
+									<input type="hidden" th:field="${accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma}" />
+									<input type="hidden" th:field="${accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma}" />
+									<input type="hidden" th:field="${accreditamentoWrapper.canAccreditatoInAttesaDiFirma}" />
+									<input type="hidden" th:field="${accreditamentoWrapper.canDiniegoInAttesaDiFirma}" />
+
+									<th:block th:if="${accreditamentoWrapper.accreditamento.isProvvisorio()}">
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isRichiestaIntegrazioneInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_PROVVISORIO_INTEGRAZIONE}', richiestaIntegrazione, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isRichiestaPreavvisoRigettoInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_PROVVISORIO_PREAVVISO_RIGETTO}', richiestaPreavvisoRigetto, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isAccreditatoInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_PROVVISORIO_DECRETO_ACCREDITAMENTO}', decretoAccreditamento, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isDiniegoInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_PROVVISORIO_DECRETO_DINIEGO}', decretoDiniego, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
 									</th:block>
-									<th:block th:if="${accreditamentoWrapper.accreditamento.isRichiestaPreavvisoRigettoInAttesaDiFirma()}">
-										<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_PROVVISORIO_PREAVVISO_RIGETTO}', richiestaPreavvisoRigetto, null, null, null, true, null, false)" ></th:block>
+
+									<th:block th:if="${accreditamentoWrapper.accreditamento.isStandard()}">
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isRichiestaIntegrazioneInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_STANDARD_INTEGRAZIONE}', richiestaIntegrazione, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isRichiestaPreavvisoRigettoInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_STANDARD_PREAVVISO_RIGETTO}', richiestaPreavvisoRigetto, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isAccreditatoInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_STANDARD_DECRETO_ACCREDITAMENTO}', decretoAccreditamento, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
+										<th:block th:if="${accreditamentoWrapper.accreditamento.isDiniegoInAttesaDiFirma()}">
+											<th:block th:include="fragments/allegatiext :: allegatiext(accreditamentoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ACCREDITAMENTO_STANDARD_DECRETO_DINIEGO}', decretoDiniego, null, null, null, true, 'edit', true)" ></th:block>
+										</th:block>
 									</th:block>
 
 									<input id="submitButtonModal" type="submit" style="display: none;" />
@@ -496,13 +525,15 @@
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda and (accreditamentoWrapper.accreditamento.isValutazioneSegreteriaVariazioneDati() or accreditamentoWrapper.accreditamento.isValutazioneCrecmVariazioneDati())}" th:text="#{label.valuta_variazione_dati}" onclick="switchMode('validate')"></a></li>
 									<li class="divider actions" th:if="${accreditamentoWrapper.canVariazioneDati or accreditamentoWrapper.canValutaVariazioneDati}"></li>
 									<li><a th:if="${accreditamentoWrapper.canVariazioneDati}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/variazioneDati|}" th:text="#{label.variazione_dati}"></a></li>
-									<li class="divider actions" th:if="${accreditamentoWrapper.canEnableField or accreditamentoWrapper.canPrendiInCarica or accreditamentoWrapper.canPresaVisione or accreditamentoWrapper.canAssegnaNuovoGruppo or accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma or accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma}"></li>
+									<li class="divider actions" th:if="${accreditamentoWrapper.canEnableField or accreditamentoWrapper.canPrendiInCarica or accreditamentoWrapper.canPresaVisione or accreditamentoWrapper.canAssegnaNuovoGruppo or accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma or accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma or accreditamentoWrapper.canAccreditatoInAttesaDiFirma or accreditamentoWrapper.canDiniegoInAttesaDiFirma}"></li>
 									<li><a th:if="${accreditamentoWrapper.canEnableField}" th:text="#{label.abilita_id_editabili}" onclick="switchMode('enableField')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/takeCharge|}" th:text="#{label.prendi_in_carica}"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPresaVisione}" th:text="#{label.presa_visione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/presaVisione|}"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" data-toggle="modal" data-target=".modal-reassign"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma}" th:text="#{label.invia_al_protocollo}" data-toggle="modal" data-target=".modal-attesa-firma"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma}" th:text="#{label.invia_al_protocollo}" data-toggle="modal" data-target=".modal-attesa-firma"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canAccreditatoInAttesaDiFirma}" th:text="#{label.invia_al_protocollo}" data-toggle="modal" data-target=".modal-attesa-firma"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canDiniegoInAttesaDiFirma}" th:text="#{label.invia_al_protocollo}" data-toggle="modal" data-target=".modal-attesa-firma"></a></li>
 									<li class="divider actions" th:if="${#authentication.principal.account.isSegreteria() and accreditamentoWrapper.accreditamento.isDomandaInRichiestaAccreditamento()}"></li>
 									<li><a th:if="${#authentication.principal.account.isSegreteria() and accreditamentoWrapper.accreditamento.isDomandaInRichiestaAccreditamento()}" th:text="#{label.conclusione_del_procedimento}" data-toggle="modal" data-target=".modal-confirm-conclusione"></a></li>
 								</ul>
