Chiusura task https://easyredmine.3di.it/issues/11663 : Accreditamento

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1494,3 +1494,12 @@ li.listStyle-elenco > label{
 .removeOption {
 	color: red !important;
 }
+
+#generaDecreto {
+	margin-left: 10px;
+}
+
+.inputDatiDecadenza {
+	height: 44px;
+}
+
